finished google search

--- a/env/.env.example
+++ b/env/.env.example
@@ -10,3 +10,6 @@ SWAGGER_DOC_TITLE='The Alex Geoapify Adapter'
 SWAGGER_DOC_DESCRIPTION='Endpoints of the Alex Geoapify Adapter'
 SWAGGER_DOC_VERSION=1.0
 SWAGGER_SERVER_PREFIX=/api/geoapify-nest-adapter/
+
+# GOOGLE
+GOOGLE_ROOT_API=rootApi
