--- a/package.json
+++ b/package.json
@@ -7,28 +7,13 @@
   "license": "UNLICENSED",
   "scripts": {
     "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
     "start:dev": "cross-env NODE_ENV=dev nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "cross-env NODE_ENV=prod node dist/main",
-    "serve:prod": "cross-env NODE_ENV=prod yarn migration:run:prod && yarn start:prod",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
-    "command-nest": "ts-node -r tsconfig-paths/register ./src/main-cli.ts",
-    "typeorm": "ts-node --require tsconfig-paths/register ./node_modules/typeorm/cli",
-    "migration:run:dev": "cross-env NODE_ENV=dev yarn typeorm migration:run -- -d ./src/core/database/typeorm.config.ts",
-    "migration:run:prod": "cross-env NODE_ENV=prod yarn typeorm migration:run -- -d ./dist/core/database/typeorm.config.js",
-    "migration:gen": "cross-env NODE_ENV=dev yarn typeorm -- -d ./src/core/database/typeorm.config.ts migration:generate ./src/core/database/migrations/$NAME",
-    "migration:create": "cross-env NODE_ENV=dev yarn typeorm -- migration:create ./src/core/database/migrations/$NAME",
-    "migration:revert:dev": "cross-env NODE_ENV=dev yarn typeorm -- -d ./src/core/database/typeorm.config.ts migration:revert",
-    "migration:revert:prod": "cross-env NODE_ENV=prod yarn  typeorm -- -d ./src/core/database/typeorm.config.ts migration:revert"
+    "serve:prod": "cross-env NODE_ENV=prod yarn start:prod"
   },
   "dependencies": {
+    "@nestjs/axios": "^3.0.2",
     "@nestjs/common": "^10.3.1",
     "@nestjs/config": "^3.2.0",
     "@nestjs/core": "^10.3.1",
@@ -36,6 +21,7 @@
     "@nestjs/platform-express": "^10.3.1",
     "@nestjs/swagger": "^7.2.0",
     "@nestjs/typeorm": "^10.0.1",
+    "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "builder-pattern": "^2.2.0",
     "class-transformer": "^0.5.1",
