--- a/env/.env.example
+++ b/env/.env.example
@@ -5,11 +5,14 @@ PORT=8081
 JWT_ACCESS_TOKEN_SECRET=secrettoken1
 
 # SWAGGER
-SWAGGER_SITE_TITLE='The Alex Search'
-SWAGGER_DOC_TITLE='The Alex Geoapify Adapter'
-SWAGGER_DOC_DESCRIPTION='Endpoints of the Alex Geoapify Adapter'
+SWAGGER_SITE_TITLE='The Alex Search Adapter'
+SWAGGER_DOC_TITLE='The Alex Search Adapter'
+SWAGGER_DOC_DESCRIPTION='Endpoints of the The Alex Search Adapter'
 SWAGGER_DOC_VERSION=1.0
-SWAGGER_SERVER_PREFIX=/api/geoapify-nest-adapter/
+SWAGGER_SERVER_PREFIX=/api/search-image-nest-adapter/
 
 # GOOGLE
-GOOGLE_ROOT_API=rootApi
+GOOGLE_ROOT_API=http://www.google.ru
+
+# YANDEX
+YANDEX_ROOT_API=https://yandex.ru
