--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@nestjs/platform-express": "^10.3.1",
     "@nestjs/swagger": "^7.2.0",
     "@nestjs/typeorm": "^10.0.1",
+    "@types/jsdom": "^21.1.6",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "builder-pattern": "^2.2.0",
@@ -31,6 +32,7 @@
     "dotenv": "^16.4.1",
     "graphql": "^16.8.1",
     "ioredis": "^5.3.2",
+    "jsdom": "^24.0.0",
     "moment": "^2.30.1",
     "nest": "^0.1.6",
     "nest-commander": "^3.12.5",
