fix adapter for boolean

--- a/env/.env.example
+++ b/env/.env.example
@@ -16,3 +16,6 @@ GOOGLE_ROOT_API=http://www.google.ru
 
 # YANDEX
 YANDEX_ROOT_API=https://yandex.ru
+
+# IMAGE SERVICE
+IMAGE_SERVICE_REQUEST_CONNECTION_TIMEOUT=2000
